hide scrollbar to avoid layout shifts

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/* html {
+  overflow-y: scroll;
+} */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 html,
 body {
   margin: 0;
